# udnn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
benchmark/: CMakeLists.txt  benchmark.cc  benchmark.py  main.cc  models.py  prepare_submission.py
benchmark/ref_model/: saved_model.pb
benchmark/ref_model/variables/: variables.data-00000-of-00001  variables.index
python/: CMakeLists.txt  model.cc  platform.hh  quantize.cc  tensor.cc  udnn.cc  util.hh
src/: CMakeLists.txt  layer.hh  model.cc  model.hh  quantize.hh  tensor.hh  udnn.hh
tests/: CMakeLists.txt  test_layer.cc  test_layer.py  test_layer_simd.py  test_model.cc  test_model.py  test_quantize.cc  test_quantize.py  test_simd.cc  test_tensor.cc  test_tensor.py
udnn/: __init__.py  layer.py  model.py  quantize.py  tensor.py
